scrollbar css and fixing for big screens

--- a/FrontEnd/src/Components/CarouselEventComponent/CarouselEventComponent.css
+++ b/FrontEnd/src/Components/CarouselEventComponent/CarouselEventComponent.css
@@ -2,19 +2,17 @@
     font-family: "Jost", sans-serif;
     width: 70%;
     height: 100%;
-    margin: 0 auto; 
+    margin: -4em auto; 
     text-align: center;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-evenly;
     gap: 0.5em;
     flex-direction: column;
-
+    align-items: center;
 }
 
 .event-carousel-img {
-    width: 50%;
-    /* height: 70%; */
+        width: 50%;
     border-radius: 4px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
@@ -33,7 +31,20 @@
     font-weight: 300;
     font-size: .8em;
     border-radius: 8px;
+    width: 110%;
     color: #ffffff;
+}
+
+@media(min-width: 600px) {
+    .event-carousel-title {
+        top: 0em;
+        width: 700px;  
+        font-size: 1em;
+        font-weight: 600;
+        rotate: -3deg;
+        text-transform: uppercase;
+        color: orange; 
+    }
 }
 
   @media (min-width: 800px) {
@@ -41,6 +52,7 @@
   .event-carousel-container {
     margin-top: -7em;
     position: relative;
+    margin-bottom: -12em; 
 }
 
 .event-carousel-img {
@@ -56,12 +68,13 @@
     box-shadow: rgba(124, 19, 145, 0.4) 0px 0px 0px 2px, rgba(124, 19, 145, 0.65) 0px 4px 6px -1px, rgba(124, 19, 145, 0.08) 0px 1px 0px inset;
     height: 100px; 
     width: 100%; 
-    font-size: 4em;
+    font-size: 3em;
     position: absolute;
     left: 0; 
     top: 59%; 
     right: 0; 
     margin: 0 auto; 
+    line-height: 2em;
 }
 
 .event-carousel-text {
@@ -70,6 +83,36 @@
     border-radius: 8px;
     color: #ffffff;
 }
+.event-carousel-title {
+    top: 18em; 
+    font-size: 2.2em;
+    font-weight: 600;
+    rotate: -3deg;
+    text-transform: uppercase;
+    color: orange; 
+    line-height: 3em;
+}
+  }
+
+  @media (min-width: 1768px){
+    .event-carousel-container {
+        width: 50%; 
+    }
+    .event-carousel-title {
+        top: 23em; 
+        font-size: 2.2em;
+        font-weight: 600;
+        rotate: -3deg;
+        text-transform: uppercase;
+        color: orange; 
+        line-height: 3em;
+    }
+    .event-carousel-text {
+        font-weight: 300;
+        font-size: 1.3em;
+        border-radius: 8px;
+        color: #ffffff;
+    }
   }
 
   
