--- a/FrontEnd/src/Components/FrontCarouselComponent/FrontCarouselComponent.css
+++ b/FrontEnd/src/Components/FrontCarouselComponent/FrontCarouselComponent.css
@@ -3,6 +3,8 @@
     height: 45vh;
     /* background: black; */
     position: relative;
+    display: flex;
+    align-items: center;
   }
   
   .front-carousel-icon {
